openmediavault (0.4.5) stable; urgency=low

  * Mantis 0000651: Rsync job recursive parameter not working correctly.
  * Mantis 0000652: Rsync job that is disabled can't be run although it
    looks as if it can.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 Nov 2012 19:23:42 +0100

openmediavault (0.4.4.1) stable; urgency=low

  * Mantis 0000644: Hostname is not updated.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 10 Nov 2012 10:56:27 +0100

openmediavault (0.4.4) stable; urgency=low

  * Update locales.
  * Improve code to assign hostname.
  * Fix bug in the configuration init/sync script.
  * Fix bug when deleting a shared folder recursively. The check to prevent
    the deletion of a shared folder that is a sub-directory of another one
    was erroneous.
  * Mantis 0000644: Hostname is not updated.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 06 Nov 2012 20:54:09 +0100

openmediavault (0.4.3) stable; urgency=low

  * Update locales.
  * Fix bug in user portal. It was not possible to change the password.
  * Simplify dialog to wipe a device.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 30 Oct 2012 18:03:53 +0100

openmediavault (0.4.2) stable; urgency=low

  * Update locales.
  * Fix various bugs in WebGUI.
  * Fix bug in OMVStorageDeviceAbstract::getDeviceFileById() method.
  * Add 'Trial run' checkbox for RSync jobs to perform a trial run with no
    changes made.
  * Mantis 0000618: Disable temperature logging if temperature checks are
    disabled under SMART.
  * Mantis 0000628: Enable and view boot log messages.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 18 Oct 2012 17:50:54 +0200

openmediavault (0.4.1) stable; urgency=low

  * Mantis 0000613: First letter in username automatically gets capitalized
    at log in.
  * Mantis 0000614: Firewall is not working. Caused by xmlstarlet issue.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 10 Oct 2012 11:58:17 +0200
